--- a/translations/kangyur/placeholders/054-001_toh120-the_mahayana_sutra_of_the_great_parinirvana.xml
+++ b/translations/kangyur/placeholders/054-001_toh120-the_mahayana_sutra_of_the_great_parinirvana.xml
@@ -4,26 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su mya ngan las 'das pa chen po theg pa chen po'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahāparinirvāṇamahāyānasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Mahāyāna Sūtra of the Great Parinirvāṇa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāparinirvāṇamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahāparinirvāṇamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su mya ngan las 'das pa chen po theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">[Note: this is the shorter, lesser known 13 fascicle version of the sūtra, translated in the early period from a Sanskrit original, which may correspond to some extent to the earliest 5th century "six-fascicle" Chinese translation by Buddhabhadra and also attributed to Faxian. It is the equivalent of the first 10 fascicles of Toh 119.]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāparinirvāṇamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《大涅槃大乘經》（大正藏：《佛說大般泥洹經》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-22"/>
-
-            
-<author role="translatorEng" ref="contributors.xml#person-142">Dr. Peter Alan Roberts</author>
+                <author role="translatorEng" ref="contributors.xml#person-142">Dr. Peter Alan Roberts</author>
                 <author role="translatorEng" ref="contributors.xml#person-143">Emily Bower</author>
-
-<consultant role="advisor" ref="contributors.xml#person-147">Ling-Lung Chen</consultant>
+                <consultant role="advisor" ref="contributors.xml#person-147">Ling-Lung Chen</consultant>
                 <consultant role="advisor" ref="contributors.xml#person-326">Wang Chih Pan</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
-
-<editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
+                <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
+                <editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -44,9 +41,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T09:47:38.947Z" user="admin">30/04/2020 09:47:38</note>
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:41:37.773Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:41:37.773Z" user="line-tofte">3</note>
+                <note type="lastUpdated" date-time="2022-06-09T15:25:07.763Z" user="admin">09/06/2022 15:25:07</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:41:37.773Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:41:37.773Z" user="line-tofte">3</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
