--- a/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
+++ b/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
@@ -44,7 +44,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Matthew, Vivian, Ye Kong and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.40.8 <date>2022</date>
+                <edition>v 1.40.9 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -82,7 +82,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T21:10:07.634Z" user="admin">09/06/2022 21:10:07</note>
+                <note type="lastUpdated" date-time="2022-06-09T21:24:04Z" user="admin">09/06/2022 21:24:04</note>
                 <note type="updated" update="text-version" value="v 1.32" date-time="2019-06-18T03:21:25.442Z" user="celso">v 1.32 2019</note>
                 <note type="updated" update="text-version" value="v 1.33" date-time="2019-06-18T15:44:43.637Z" user="celso">v 1.33 2019</note>
                 <note type="updated" update="text-version" value="v 1.34" date-time="2019-06-21T14:15:47.78Z" user="celso">v 1.34 2019</note>
@@ -169,6 +169,7 @@
                     links.</note>
                 <note type="updated" update="text-version" value="1.40.7" date-time="2022-06-09T10:28:15.22Z" user="martina-cotter">Added pending links.</note>
                 <note type="updated" update="text-version" value="1.40.8" date-time="2022-06-09T21:10:03.289Z" user="celso">Slight adjustment to newly added links, also unlinked some terms in intro</note>
+                <note type="updated" update="text-version" value="1.40.9" date-time="2022-06-09T21:23:59.735Z" user="celso">fixed a bibl entry</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -30760,12 +30761,6 @@
                             Transcendent Perfection of Wisdom]. Toh 21, Degé Kangyur vol. 34 (shes
                             phyin, ka), f. 144b–146a; also KPD 34, pp. 402–405. Translated in Red
                             Pine (2004).</bibl>
-                        <bibl xml:id="UT22084-031-002-5548">Dharmachakra Translation Committee,
-                            trans. <title xml:lang="en">
-                                <ref target="https://read.84000.co/translation/toh21.html">The Heart
-                                    of the Perfection of Wisdom, the Blessed Mother</ref>
-                            </title>
-                            (Toh 21). 84000: Translating the Words of the Buddha, 2022.</bibl>
                     </div>
                     <div type="section" xml:id="UT22084-031-002-listBibl-2-2">
                         <head type="section" tid="3314">Indic Commentaries</head>
@@ -30942,22 +30937,27 @@
                             Bodhisattva Doctrine in Buddhist Sanskrit Literature</title>. London:
                         Routledge &amp; Kegan Paul, 1932. Reprinted Delhi: Motilal Banarsidass,
                         1970.</bibl>
-                    <bibl xml:id="UT22084-031-002-5547">———trans. (2021). <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh153.html">The
-                                Questions of Nāga King Sāgara (1)</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Sāgara­nāga­rāja­paripṛcchā</title>, Toh
-                        153). 84000: Translating the Words of the Buddha, 2021.</bibl>
-                    <bibl xml:id="UT22084-031-002-5541">———trans. (2019). <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh231.html">The Jewel
-                                Cloud</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Ratnamegha</title>, Toh 231). 84000:
-                        Translating the Words of the Buddha, 2019.</bibl>
                     <bibl xml:id="UT22084-031-002-2825">Dharmachakra Translation Committee, trans.
                         (2013). <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh95.html">The Play in
                                 Full</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Lalita­vistara</title>). 84000: Translating the Words of the Buddha,
-                        2013.</bibl>
+                        </title> (<title xml:lang="Sa-Ltn">Lalita­vistara</title>). 84000: Translating the Words of the Buddha.</bibl>
+                    <bibl xml:id="UT22084-031-002-5541">———trans. (2019). <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh231.html">The Jewel
+                            Cloud</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Ratnamegha</title>, Toh 231). 84000:
+                        Translating the Words of the Buddha.</bibl>
+                    <bibl xml:id="UT22084-031-002-5547">———trans. (2021). <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh153.html">The
+                            Questions of Nāga King Sāgara (1)</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Sāgara­nāga­rāja­paripṛcchā</title>, Toh
+                        153). 84000: Translating the Words of the Buddha.</bibl>
+                    <bibl xml:id="UT22084-031-002-5548">———trans. (2022).
+                        <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh21.html">The Heart
+                            of the Perfection of Wisdom, the Blessed Mother</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Bhagavatī­prajñā­pāramitā­hṛdaya</title>, 
+                        Toh 21). 84000: Translating the Words of the Buddha.</bibl>
                     <bibl xml:id="UT22084-031-002-2826">Dorje, Gyurme, trans. (1987). “The
                         Guhyagarbhatantra and its XIVth Century Tibetan Commentary Phyogs bcu mun
                         sel.” 3 vols. PhD diss. University of London, School of Oriental and African
