--- a/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
+++ b/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
@@ -44,7 +44,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Matthew, Vivian, Ye Kong and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.40.9 <date>2022</date>
+                <edition>v 1.40.10 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -82,7 +82,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T21:24:04Z" user="admin">09/06/2022 21:24:04</note>
+                <note type="lastUpdated" date-time="2022-06-10T11:13:38.846Z" user="admin">10/06/2022 11:13:38</note>
                 <note type="updated" update="text-version" value="v 1.32" date-time="2019-06-18T03:21:25.442Z" user="celso">v 1.32 2019</note>
                 <note type="updated" update="text-version" value="v 1.33" date-time="2019-06-18T15:44:43.637Z" user="celso">v 1.33 2019</note>
                 <note type="updated" update="text-version" value="v 1.34" date-time="2019-06-21T14:15:47.78Z" user="celso">v 1.34 2019</note>
@@ -170,6 +170,7 @@
                 <note type="updated" update="text-version" value="1.40.7" date-time="2022-06-09T10:28:15.22Z" user="martina-cotter">Added pending links.</note>
                 <note type="updated" update="text-version" value="1.40.8" date-time="2022-06-09T21:10:03.289Z" user="celso">Slight adjustment to newly added links, also unlinked some terms in intro</note>
                 <note type="updated" update="text-version" value="1.40.9" date-time="2022-06-09T21:23:59.735Z" user="celso">fixed a bibl entry</note>
+                <note type="updated" update="text-version" value="1.40.10" date-time="2022-06-10T11:13:34.498Z" user="celso">minor correction to bibl entry</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -31055,9 +31056,8 @@
                             5B</title>, Seattle and London: Univ. of Washington Press.</bibl>
                     <bibl xml:id="UT22084-031-002-2858">Schopen, Geoffrey. <title xml:lang="en">Figments and Fragments of Mahāyāna Buddhism in India</title>. Honolulu:
                         University of Hawaii Press, 2005.</bibl>
-                    <bibl xml:id="UT22084-031-002-2859">Sparham, Gareth, trans. <title xml:lang="en">Abhisamayālaṃkāra with vṛtti and ālokā / vṛtti by Ārya Vi­mukti­sena;
-                            ālokā by Haribhadra</title>. 4 vols. Fremont, CA: Jain Publishing,
-                        2006-2012.</bibl>
+                    <bibl xml:id="UT22084-031-002-2859">Sparham, Gareth, trans. (2006-2012). <title xml:lang="en">Abhisamayālaṃkāra with vṛtti and ālokā / vṛtti by Ārya Vi­mukti­sena;
+                            ālokā by Haribhadra</title>. 4 vols. Fremont, CA: Jain Publishing.</bibl>
                     <bibl xml:id="UT22084-031-002-5550">———trans. (2022). <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh10.html">The Transcendent Perfection of Wisdom in Eighteen Thousand Lines</ref>
                         </title> (<title xml:lang="Sa-Ltn">Aṣṭa­daśa­sāhasrikā­prajñā­pāramitā</title>, Toh 10). 84000:
