--- a/translations/kangyur/placeholders/010-001_toh6-finer_points_of_discipline.xml
+++ b/translations/kangyur/placeholders/010-001_toh6-finer_points_of_discipline.xml
@@ -4,18 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'dul ba phran tshegs kyi gzhi/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vinayakṣudrakavastu</title>
                 <title type="mainTitle" xml:lang="en">Finer Points of Discipline</title>
-                <title type="otherTitle" xml:lang="zh">根本說一切有部毘奈耶雜事</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vinayakṣudrakavastu</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'dul ba phran tshegs kyi gzhi/</title>
+                <title type="otherTitle" xml:lang="zh">《根本說一切有部毘奈耶雜事》</title>
                 <author role="translatorMain" ref="contributors.xml#team-33"/>
-                <sponsor ref="sponsors.xml#sponsor-40">胡作胜先生、王爱莲女士以及胡懿真小姐</sponsor>
-            <author role="translatorEng" ref="contributors.xml#person-199">Dr. Geshe Lozang Jamspal</author>
+                <author role="translatorEng" ref="contributors.xml#person-199">Dr. Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="contributors.xml#person-200">Kaia Fischer</author>
-    <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
+                <sponsor ref="sponsors.xml#sponsor-40">胡作胜先生、王爱莲女士以及胡懿真小姐</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,9 +39,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T09:51:55.597Z" user="admin">30/04/2020 09:51:55</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:01:03.058Z" user="admin">10/06/2022 16:01:03</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
