--- a/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -7,7 +7,7 @@
                 <title type="mainTitle" xml:lang="en">The Perfection of Wisdom in Twenty-five Thousand Lines</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">pañcaviṃśatisāhasrikā­prajñāpāramitā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag nyi shu lnga pa/ \(nyi khri/\)</title>
-                <title type="otherTitle" xml:lang="zh">般若波羅密多二萬五千頌</title>
+                <title type="otherTitle" xml:lang="zh">《般若波羅密多二萬五千頌》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag nyi shu lnga pa/</title>
                 <author role="translatorMain" ref="eft:team-21">Padmakara Translation Group</author>
                 <author role="translatorEng" ref="eft:person-140">Gyurme Dorje</author>
@@ -20,7 +20,7 @@
                 <sponsor ref="sponsors.xml#sponsor-1">Kris Yao and Xiang-Jen Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.5 <date>2019</date>
+                <edition>v 0.1.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -42,18 +42,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-24T13:37:11.025Z" user="admin">24/01/2022 13:37:11</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-11T09:22:31.551Z" user="andreas">v 0.1.0</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T08:40:05.134Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T08:42:25.994Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.3" date-time="2021-04-15T08:42:55.56Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2022-01-24T13:35:19.317Z" user="line-tofte">2.e</note>
-
-    <note type="updated" update="text-version" value="0.1.4" date-time="2022-01-24T13:35:19.317Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.1.5" date-time="2022-01-24T13:37:05.095Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-06-10T16:06:09.283Z" user="admin">10/06/2022 16:06:09</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-11T09:22:31.551Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T08:40:05.134Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T08:42:25.994Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-04-15T08:42:55.56Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-01-24T13:35:19.317Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2022-01-24T13:35:19.317Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2022-01-24T13:37:05.095Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
