--- a/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin brgyad stong pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭasāhasrikāprajñāpāramitā</title>
                 <title type="mainTitle" xml:lang="en">The Perfection of Wisdom in Eight Thousand Lines</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa brgyad stong pa/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭasāhasrikāprajñāpāramitā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin brgyad stong pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭasāhasrikāprajñāpāramitā</title>
-                <title type="otherTitle" xml:lang="zh">般若波羅密多八千頌</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa brgyad stong pa/</title>
+                <title type="otherTitle" xml:lang="zh">《般若波羅密多八千頌》</title>
                 <author role="translatorMain" ref="contributors.xml#team-21"/>
-            <sponsor ref="sponsors.xml#sponsor-14">般若八千頌譯經護持小組</sponsor>
                 <author role="translatorEng" ref="contributors.xml#person-228">Greg Seton</author>
-    <consultant role="projectManager" ref="contributors.xml#person-139">Dr. John Canti</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-139">Dr. John Canti</consultant>
+                <sponsor ref="sponsors.xml#sponsor-14">般若八千頌譯經護持小組</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,9 +36,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:08:18.532Z" user="admin">20/12/2019 13:08:18</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:09:57.621Z" user="admin">10/06/2022 16:09:57</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
