--- a/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
+++ b/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
@@ -4,17 +4,15 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Heart of the Perfection of Wisdom, the Blessed
-          Mother</title>
+        <title type="mainTitle" xml:lang="en">The Heart of the Perfection of Wisdom, the Blessed Mother</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Bhagavatī­prajñā­pāramitā­hṛdaya</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">bcom ldan ’das ma shes rab kyi pha rol tu phyin
-          pa’i snying po</title>
         <title type="mainTitle" xml:lang="bo">བཅོམ་ལྡན་འདས་མ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པའི་སྙིང་པོ།</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">bcom ldan ’das ma shes rab kyi pha rol tu phyin pa’i snying po</title>
+        <title type="otherTitle" xml:lang="en">The Heart of the Illustrious Perfection of Wisdom</title>
         <title type="otherTitle" xml:lang="en">The Heart Sūtra</title>
-        <title type="otherTitle" xml:lang="en">The Heart of the Illustrious Perfection of
-          Wisdom</title>
         <title type="otherTitle" xml:lang="en">The Essence of the Perfection of Wisdom</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi snying po</title>
+        <title type="otherTitle" xml:lang="zh">《薄伽梵母般若波羅蜜多心經》（大正藏：《佛說聖佛母般若波羅蜜多經》）</title>
         <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation
           Committee<lb/>under the patronage and supervision of 84000: Translating the Words of the
           Buddha</author>
@@ -30,7 +28,7 @@
         <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -82,16 +80,14 @@
 
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-03T14:30:11.526Z" user="admin">03/06/2022 14:30:11</note>
+        <note type="lastUpdated" date-time="2022-06-10T16:11:14.568Z" user="admin">10/06/2022 16:11:14</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-04T08:27:00.524Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-04T08:27:33.701Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-01-24T10:29:40.031Z" user="line-tofte">2.h</note>
-
         <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-24T10:29:40.031Z" user="line-tofte">Auto
           (update-publication-status)</note>
-
         <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-24T10:35:59.069Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="2.g" date-time="2022-02-09T10:19:00.055Z" user="line-tofte">2.g</note>
         <note type="updated" update="text-version" value="0.0.6" date-time="2022-02-09T10:19:00.055Z" user="line-tofte">Auto
@@ -117,13 +113,13 @@
         <note type="updated" update="translation-status" value="2.a" date-time="2022-04-29T06:29:16.386Z" user="line-tofte">2.a</note>
         <note type="updated" update="text-version" value="0.0.15" date-time="2022-04-29T06:29:16.386Z" user="line-tofte">Auto
           (update-publication-status)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-05-06T07:08:06.035Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-06T07:08:06.035Z" user="line-tofte">Auto (update-publication-status)</note>
-          <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-06T07:11:01.1Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="1.a" date-time="2022-05-10T05:14:48.405Z" user="sameer">1.a</note>
-          <note type="updated" update="text-version" value="1.0.0" date-time="2022-05-10T05:14:48.405Z" user="sameer">First published version</note>
-          <note type="updated" update="text-version" value="1.0.1" date-time="2022-05-17T18:09:14.045Z" user="martina-cotter">Updated pending links, and bibliography entry.</note>
-          <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-03T14:30:07.658Z" user="celso">Activated pending links and added bibl</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-05-06T07:08:06.035Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-06T07:08:06.035Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-06T07:11:01.1Z" user="line-tofte">Auto (update-contributors)</note>
+        <note type="updated" update="translation-status" value="1.a" date-time="2022-05-10T05:14:48.405Z" user="sameer">1.a</note>
+        <note type="updated" update="text-version" value="1.0.0" date-time="2022-05-10T05:14:48.405Z" user="sameer">First published version</note>
+        <note type="updated" update="text-version" value="1.0.1" date-time="2022-05-17T18:09:14.045Z" user="martina-cotter">Updated pending links, and bibliography entry.</note>
+        <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-03T14:30:07.658Z" user="celso">Activated pending links and added bibl</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
