--- a/translations/kangyur/placeholders/035-001_toh44-1-chapter_1_the_ornaments_of_all_the_lords_of_the_world.xml
+++ b/translations/kangyur/placeholders/035-001_toh44-1-chapter_1_the_ornaments_of_all_the_lords_of_the_world.xml
@@ -4,13 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'jig rten gyi dbang po thams cad kyi rgyan gyi tshul le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 1: The Ornaments of All the Lords of the World</title>
-                <title type="otherTitle" xml:lang="zh">一切世主莊嚴品/世間淨眼品 /世主妙嚴品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'jig rten gyi dbang po thams cad kyi rgyan gyi tshul le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《一切世主莊嚴品》</title>
                 <sponsor ref="sponsors.xml#sponsor-209">巨人能源 （程晨）</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -28,8 +28,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T17:07:51.735Z" user="admin">10/05/2021 17:07:51</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-04-09T10:25:37.701Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:12:58.441Z" user="admin">10/06/2022 16:12:58</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-04-09T10:25:37.701Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T17:07:48.98Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
