--- a/translations/kangyur/placeholders/035-030_toh44-30-chapter_30_vajradhvajas_dedication.xml
+++ b/translations/kangyur/placeholders/035-030_toh44-30-chapter_30_vajradhvajas_dedication.xml
@@ -4,16 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje rgyal mtshan yongs bsngo'i le'u/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajradhvajapariṇāma</title>
                 <title type="mainTitle" xml:lang="en">Chapter 30: Vajradhvaja's Dedication</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa' rdo rje rgyal mtshan gyis yongs su bsngo ba'i le'u/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vajradhvajapariṇāma</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje rgyal mtshan yongs bsngo'i le'u/</title>
                 <title type="otherTitle" xml:lang="en">[Note: This chapter contains 10 subchapters]</title>
-                <title type="otherTitle" xml:lang="zh">金剛幢迴向品/金剛幢菩薩十迴向品/十迴向品</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《金剛幢迴向品》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa' rdo rje rgyal mtshan gyis yongs su bsngo ba'i le'u/</title>
                 <sponsor ref="sponsors.xml#sponsor-208">释圆意, 释观山, 王建明, 王丽云, 徐冠群, 王洁, 徐一惠</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -32,8 +32,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T17:18:07.044Z" user="admin">10/05/2021 17:18:07</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-16T16:27:17.387Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:16:50.124Z" user="admin">10/06/2022 16:16:50</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-16T16:27:17.387Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T17:18:04.169Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
