--- a/translations/kangyur/translations/036-002_toh44-31-chapter_31_the_ten_grounds.xml
+++ b/translations/kangyur/translations/036-002_toh44-31-chapter_31_the_ten_grounds.xml
@@ -4,18 +4,17 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">sa bcu pa</title>
-                                <title type="mainTitle" xml:lang="bo">ས་བཅུ་པ།</title>
                                 <title type="mainTitle" xml:lang="en">The Ten Bhūmis</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Daśabhūmika</title>
-                                <title type="longTitle" xml:lang="bo">ཤིན་ཏུ་རྒྱས་པ་ཆེན་པོའི་མདོ་སངས་རྒྱས་ཕལ་པོ་ཆེ་ཞེས་བྱ་བ་ལས་ས་བཅུ་པའི་ལེའུ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">shin tu rgyas pa chen po’i mdo sangs rgyas phal po che zhes bya ba las sa
-                                        bcu pa’i le’u</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">sa bcu pa</title>
+                                <title type="mainTitle" xml:lang="bo">ས་བཅུ་པ།</title>
                                 <title type="longTitle" xml:lang="en">The Ten Bhūmis Chapter from the Mahāvaipulya Sūtra “A Multitude of Buddhas”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Buddhāvataṃsaka­nāma­mahāvaipulya­sūtrāt daśa­bhūmikaḥ paṭalaḥ</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa byang chub sems dpa’i sa bcu/</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">shin tu rgyas pa chen po’i mdo sangs rgyas phal po che zhes bya ba las sa bcu pa’i le’u</title>
+                                <title type="longTitle" xml:lang="bo">ཤིན་ཏུ་རྒྱས་པ་ཆེན་པོའི་མདོ་སངས་རྒྱས་ཕལ་པོ་ཆེ་ཞེས་བྱ་བ་ལས་ས་བཅུ་པའི་ལེའུ།</title>
                                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabodhisattvadaśabhūmika</title>
-                                <title type="otherTitle" xml:lang="zh">十地經</title>
+                                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《十地品》</title>
+                                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa byang chub sems dpa’i sa bcu/</title>
                                 <author role="translatorMain" ref="contributors.xml#team-22">Translated by Peter Alan Roberts<lb/>under the patronage
                                         and supervision of 84000: Translating the Words of the Buddha</author>
                                 <author role="translatorEng" ref="contributors.xml#person-142">Peter Alan Roberts</author>
@@ -32,7 +31,7 @@
                                 <sponsor ref="sponsors.xml#sponsor-99">Shakya Dewa and family</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -69,8 +68,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-02-16T15:45:24.957Z" user="admin">16/02/2022 15:45:24</note>
-
+                                <note type="lastUpdated" date-time="2022-06-10T16:18:35.308Z" user="admin">10/06/2022 16:18:35</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:09:26.959Z" user="mike">2.f</note>
@@ -95,17 +93,17 @@
                                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-08-11T07:39:26.038Z" user="mike">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-08-11T07:43:48.08Z" user="mike">0.0.8</note>
-                        
-    <note type="updated" update="translation-status" value="2" date-time="2021-08-27T06:15:08.086Z" user="line-tofte">2</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-27T06:15:08.086Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-27T06:16:32.167Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-13T10:37:32.815Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1.a" date-time="2021-09-17T16:47:18.181Z" user="celso">1.a</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-17T16:47:18.181Z" user="celso">0.0.5</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-09-17T16:49:27.24Z" user="celso">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-17T16:49:27.24Z" user="celso">1.0.0</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-20T17:22:26.958Z" user="john">changed "very extensive" to Mahāvaipulya in long title and other refs. to it.</note>    <note type="updated" update="text-version" value="1.0.2" date-time="2022-02-16T15:45:21.06Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
-            </notesStmt>
+                                <note type="updated" update="translation-status" value="2" date-time="2021-08-27T06:15:08.086Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-27T06:15:08.086Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-27T06:16:32.167Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-13T10:37:32.815Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="translation-status" value="1.a" date-time="2021-09-17T16:47:18.181Z" user="celso">1.a</note>
+                                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-17T16:47:18.181Z" user="celso">0.0.5</note>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-09-17T16:49:27.24Z" user="celso">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-17T16:49:27.24Z" user="celso">1.0.0</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-20T17:22:26.958Z" user="john">changed "very extensive" to Mahāvaipulya in long title and other refs. to it.</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2022-02-16T15:45:21.06Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
