--- a/translations/kangyur/placeholders/036-005_toh44-34-chapter_34_the_superknowledges.xml
+++ b/translations/kangyur/placeholders/036-005_toh44-34-chapter_34_the_superknowledges.xml
@@ -4,13 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mngon shes le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 34: The Superknowledges</title>
-                <title type="otherTitle" xml:lang="zh">十明品/十通品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mngon shes le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《十明品》</title>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -28,8 +28,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-11T05:15:20.468Z" user="admin">11/05/2021 05:15:20</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:08.526Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:19:49.178Z" user="admin">10/06/2022 16:19:49</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:08.526Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:15:17.615Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
