--- a/translations/kangyur/placeholders/036-007_toh44-36-chapter_36_the_teaching_on_the_reckoning_from_the_questions_of_sovereign_mind.xml
+++ b/translations/kangyur/placeholders/036-007_toh44-36-chapter_36_the_teaching_on_the_reckoning_from_the_questions_of_sovereign_mind.xml
@@ -4,13 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sems kyi rgyal po dris nas grangs la 'jug pa bstan pa'i le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 36: The Teaching on the Reckoning from the Questions of Sovereign Mind</title>
-                <title type="otherTitle" xml:lang="zh">心王菩薩問阿僧祇品/阿僧祇品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sems kyi rgyal po dris nas grangs la 'jug pa bstan pa'i le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《心王菩薩問阿僧祇品》</title>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -28,8 +28,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-11T05:17:23.489Z" user="admin">11/05/2021 05:17:23</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:25.156Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:21:04.158Z" user="admin">10/06/2022 16:21:04</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:25.156Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:17:20.664Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
