--- a/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
@@ -6,13 +6,13 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 38: The Dwellings of Bodhisattvas</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpa'i gnas kyi le'u/</title>
-                <title type="otherTitle" xml:lang="zh">菩薩住處品/諸菩薩住處品</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《菩薩住處品》</title>
                 <author role="translatorMain" ref="eft:team-75"/>
                 <author role="translatorEng" ref="eft:person-390">Thupten Tashi</author>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -31,17 +31,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-02-28T12:41:37.613Z" user="admin">28/02/2022 12:41:37</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:23:27.206Z" user="admin">10/06/2022 16:23:27</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:18:35.836Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T13:07:38.914Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="translation-status" value="3" date-time="2022-01-06T13:08:38.554Z" user="line-tofte">3</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T13:08:38.554Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-28T12:41:29.72Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-28T12:41:29.72Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T13:07:38.914Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-01-06T13:08:38.554Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T13:08:38.554Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-02-28T12:41:29.72Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-28T12:41:29.72Z" user="line-tofte">Auto (update-publication-status)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
