--- a/translations/kangyur/placeholders/037-003_toh44-41-chapter_41_the_teaching_on_the_minor_marks_and_light_rays.xml
+++ b/translations/kangyur/placeholders/037-003_toh44-41-chapter_41_the_teaching_on_the_minor_marks_and_light_rays.xml
@@ -4,13 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dpe byad 'od zer bstan pa'i le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 41: The Teaching on the Minor Marks and Light Rays</title>
-                <title type="otherTitle" xml:lang="zh">佛小相光明功德品/如來隨好光明功德品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dpe byad 'od zer bstan pa'i le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《如來隨好光明功德品》</title>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -28,8 +28,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-11T05:19:56.227Z" user="admin">11/05/2021 05:19:56</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:59.163Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:25:54.424Z" user="admin">10/06/2022 16:25:54</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:59.163Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:19:53.413Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
