--- a/translations/kangyur/placeholders/037-004_toh44-42-chapter_42_the_teaching_on_samantabhadras_practice.xml
+++ b/translations/kangyur/placeholders/037-004_toh44-42-chapter_42_the_teaching_on_samantabhadras_practice.xml
@@ -4,13 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">kun tu bzang po'i spyod pa bstan pa'i le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 42: The Teaching on Samantabhadra's Practice</title>
-                <title type="otherTitle" xml:lang="zh">普賢菩薩行品/普賢行品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">kun tu bzang po'i spyod pa bstan pa'i le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《 普賢菩薩行品》 </title>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -28,8 +28,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-11T05:20:12.486Z" user="admin">11/05/2021 05:20:12</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:20:10.398Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-10T16:28:34.224Z" user="admin">10/06/2022 16:28:34</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:20:10.398Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:20:09.693Z" user="amy">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
