--- a/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
+++ b/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T10:48:59.176Z" user="admin">10/06/2022 10:48:59</note>
+                <note type="lastUpdated" date-time="2022-06-11T10:04:35.592Z" user="admin">11/06/2022 10:04:35</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-03-22T09:22:03.132Z" user="line-tofte">2.h</note>
@@ -111,6 +111,7 @@
     <note type="updated" update="translation-status" value="1.a" date-time="2022-06-09T14:37:00.797Z" user="andre">1.a</note>
     <note type="updated" update="text-version" value="1.0.0" date-time="2022-06-09T14:37:00.797Z" user="andre">First published version</note>
     <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-10T10:48:55.38Z" user="john">Some minor edits and line spaces added.</note>
+    <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-11T10:04:31.779Z" user="andre">Glossary status changed - activated in CG</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1360,7 +1361,7 @@
                         84000: Translating the Words of the Buddha, 2017.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-043-009-268">
