--- a/translations/kangyur/translations/075-002_toh344-the_sutra_of_jnanaka.xml
+++ b/translations/kangyur/translations/075-002_toh344-the_sutra_of_jnanaka.xml
@@ -11,9 +11,9 @@
                                 <title type="longTitle" xml:lang="en">The Noble Sūtra of Jñānaka: An
                                         Account of the Noble Deeds of the Buddha</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­jñānaka­sūtra­buddhāvadāna</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སངས་རྒྱས་ཀྱི་རྟོགས་པ་བརྗོད་པ་ཤེས་ལྡན་གྱི་མདོ།</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sangs rgyas kyi
                                         rtogs pa brjod pa shes ldan gyi mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་སངས་རྒྱས་ཀྱི་རྟོགས་པ་བརྗོད་པ་ཤེས་ལྡན་གྱི་མདོ།</title>
                                 <author role="translatorMain" ref="eft:team-49">Translated by the
                                         Subhashita Translation Group<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
@@ -25,9 +25,10 @@
                                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
                                 <editor role="finalReviewer" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.17 <date>2022</date>
+                <edition>v 0.0.18 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -70,7 +71,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-06-07T14:24:53.373Z" user="admin">07/06/2022 14:24:53</note>
+                                <note type="lastUpdated" date-time="2022-06-13T11:40:01.727Z" user="admin">13/06/2022 11:40:01</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:53:02.406Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:53:02.406Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:09:59.989Z" user="line-tofte">3</note>
@@ -115,6 +116,7 @@
                             <note type="updated" update="text-version" value="0.0.15" date-time="2022-04-21T07:25:04.159Z" user="line-tofte">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="0.0.16" date-time="2022-06-02T15:59:25.504Z" user="celso">Activated pending link to Toh 345 and added bibl entry</note>
                             <note type="updated" update="text-version" value="0.0.17" date-time="2022-06-07T14:24:47.602Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.18" date-time="2022-06-13T11:39:55.956Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
